--- a/LoginRegister/styles.css
+++ b/LoginRegister/styles.css
@@ -16,6 +16,7 @@ body {
 h1 {
   font-weight: 300;
 }
+
 form {
   background-color: #fff;
   display: flex;
@@ -26,6 +27,7 @@ form {
   height: 100%;
   text-align: center;
 }
+
 button {
   border-radius: 6px;
   padding: 12px 24px;
@@ -79,12 +81,18 @@ input::placeholder {
   width: 60%;
   z-index: 2;
 }
+
 .form-container.sign-up-container {
   left: 0;
   width: 60%;
   opacity: 0;
   z-index: 1;
 }
+
+.form-container .sign-in-container a:link{
+  text-decoration: none;
+}
+
 .form-container button {
   background: salmon;
   border: 1px solid salmon;
@@ -94,6 +102,7 @@ input::placeholder {
   background: transparent;
   color: salmon;
 }
+
 .container.right-panel-active .sign-in-container {
   transform: translateX(66.5%);
 }
