--- a/LoginRegister/styles.css
+++ b/LoginRegister/styles.css
@@ -15,6 +15,7 @@ body {
 }
 h1 {
   font-weight: 300;
+  margin-top: -10px;
 }
 
 .links {
@@ -283,4 +284,25 @@ input::placeholder {
     -webkit-transform: translateY(-700px) rotate(600deg);
     transform: translateY(-700px) rotate(600deg);
   }
+}
+
+.button {
+  border-radius: 6px;
+  padding: 12px 24px;
+  background: #ffffff14;
+  border: 1px solid #fff;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-weight: 300;
+  transition: transform 80ms ease-in;
+}
+.button:hover {
+  background: #fff;
+  color: salmon;
+}
+.button:active {
+  transform: scale(0.95);
 }
